@@ -5,6 +5,8 @@ Version 0.5
 -----------
 (codename to be selected, release date yet unknown)
 
+- `Map.bind_to_environ` uses the `Host` header now if available.
+
 Version 0.4
 -----------
 (codename Schraubenzieher, released on November 23rd 2008)
